--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,41 @@
-/*  your css code here. If applicable */
+
+    :root {
+      background-color: rgb(135, 206, 235);
+    }
+
+    /* Article paragraphs */
+    article p:first-child {
+      background-color: black;
+      color: white;
+    }
+
+    article p:nth-child(2) {
+      color: black;
+    }
+
+    article p:last-child {
+      color: red;
+    }
+
+    /* Unordered list styling */
+    ul li {
+      background-color: gray;
+      width: 50%;
+      padding: 10px;
+    }
+
+    ul li:nth-child(odd) {
+      background-color: white;
+    }
+
+    /* First and last items */
+    ul li:first-child,
+    ul li:last-child {
+      font-size: 22px;
+    }
+
+    /* Third-to-last item */
+    ul li:nth-last-child(3) {
+      background-color: pink;
+    }
+  
